# piggyboard

./: .gitignore  Cargo.toml  README.md
migrations/2023-11-01-060246_create_user/: up.sql
migrations/2023-11-01-060337_create_post/: down.sql  up.sql
migrations/2023-11-01-060532_create_comment/: down.sql  up.sql
migrations/2023-11-04-051242_create_article/: up.sql
migrations/2023-11-04-070700_create_rate/: down.sql  up.sql
migrations/2023-11-05-073231_create_comment/: up.sql
migrations/2023-11-06-223422_create_article_history/: up.sql
migrations/2023-11-06-223429_create_comment_history/: up.sql
migrations/2023-11-06-223708_create_article_acl/: up.sql
public/views/: 401.html  403.html  404.html  418.html  500.html  acl.html  birthdaygender.html  challenge_pwd.html  createaccount.html  createpassword.html  createusername.html  edit_comment.html  error.html  identifier.html  index.html  recvemail.html  updates.html  users.html  view.html  write.html
src/: cryp.rs  lib.rs  main.rs  schema.rs
src/api/: mod.rs
src/api/v1/: mod.rs  rate.rs
src/board/v1/: meta.rs  mod.rs
src/board/v1/auth/: login.rs  mod.rs  signup.rs
src/error/: kind.rs  mod.rs
src/models/: acl.rs  article.rs  comment.rs  mod.rs  rate.rs  user.rs
src/res/: error.rs
src/utils/: mod.rs
static/: f.js  sg.js  t.js
