[package]
name = "piggyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookie"] }
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-identity = "0.6.0"
actix-cors = "0.6.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.10"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "r2d2"] }
regex = "1.9.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.1"
tera = "1.0"
md-5 = "0.10.6"
actix-csrf = { path = "./actix-csrf" }
rand = "0.8.5"